# autogen_rust

./: Cargo.toml
examples/: collaborative_chat.rs
src/: agent_traits.rs  agent_traits2.rs  chat.rs  chat2.rs  code_traits.rs  group_chat.rs  lib.rs  main.rs  text_chat.rs  user_agent.rs  user_proxy_agent_executor.rs
src/chat/: channel.rs  error.rs  scheduler.rs
src/chat2/: scheduler.rs
src/code_traits/: fenced_code_block_extractor.rs  implementation.rs  native_code_executor.rs
src/group_chat/: error.rs  scheduler.rs
src/text_chat/: chat_user_agent.rs  chat_user_agent_error.rs  code.rs  collaborative_agent.rs  collaborative_agent_error.rs  collaborative_chat.rs  collaborative_chat_error.rs
src/user_agent/: local_user_agent.rs  user_proxy_agent_executor.rs
